k8s/canary/stable-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aceest-stable
spec:
  replicas: 4
  selector:
    matchLabels:
      app: aceest-fitness
      track: stable
  template:
    metadata:
      labels:
        app: aceest-fitness
        track: stable
    spec:
      containers:
        - name: aceest-fitness
          image: 2025ht66039/aceest-fitness-app:v2
          ports:
            - containerPort: 5000
          readinessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 5
