k8s/canary/stable-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aceest-stable-service
spec:
  type: ClusterIP
  selector:
    app: aceest-fitness
    track: stable
  ports:
    - port: 80
      targetPort: 5000
